adding strong rule

--- a/LM_SCAD_MCP_np_MODULE.ipynb
+++ b/LM_SCAD_MCP_np_MODULE.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-19T22:52:17.535894Z",
-     "start_time": "2022-05-19T22:52:16.579896Z"
+     "end_time": "2022-05-22T17:00:01.598433Z",
+     "start_time": "2022-05-22T17:00:00.648404Z"
     }
    },
    "outputs": [],
@@ -50,8 +50,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-19T22:52:17.583924Z",
-     "start_time": "2022-05-19T22:52:17.536894Z"
+     "end_time": "2022-05-22T17:00:01.645430Z",
+     "start_time": "2022-05-22T17:00:01.599406Z"
     }
    },
    "outputs": [],
@@ -169,11 +169,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-19T23:04:45.427840Z",
-     "start_time": "2022-05-19T23:04:45.368280Z"
+     "end_time": "2022-05-22T17:00:01.693442Z",
+     "start_time": "2022-05-22T17:00:01.646402Z"
     }
    },
    "outputs": [],
@@ -215,27 +215,52 @@
     "    error = y - X@x_temp\n",
     "    return (error.T@error)/(2*N) + np.sum(SCAD(x_temp, lambda_=_lambda, gamma=gamma))\n",
     "\n",
+    "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def UAG_LM_SCAD_MCP(design_matrix, outcome, beta_0 = np.ones(1), tol=1e-2, maxit=500, _lambda=-.5, penalty=\"SCAD\", a=3.7, gamma=2., L_convex=1.1):\n",
+    "def lambda_max_LM(X, y):\n",
+    "    X_temp = X.copy()\n",
+    "    X_temp = X_temp[:,1:]\n",
+    "    X_temp -= np.mean(X_temp,0).reshape(1,-1)\n",
+    "    X_temp /= np.std(X_temp,0)\n",
+    "    y_temp = y.copy()\n",
+    "    y_temp -= np.mean(y)\n",
+    "    y_temp /= np.std(y)\n",
+    "    grad_at_0 = y_temp@X_temp/len(y_temp)\n",
+    "    lambda_max = np.linalg.norm(grad_at_0, ord=np.infty)\n",
+    "    return lambda_max\n",
+    "\n",
+    "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
+    "def strong_rule_seq_LM(X, y, beta_old, lambda_new, lambda_old):\n",
+    "    X_temp = X.copy()\n",
+    "    X_temp -= np.mean(X_temp,0).reshape(1,-1)\n",
+    "    X_temp /= np.std(X_temp,0)\n",
+    "    y_temp = y.copy()\n",
+    "    y_temp -= np.mean(y)\n",
+    "    y_temp /= np.std(y)\n",
+    "    grad = np.abs((y-X_temp@beta_old[1:])@X_temp/(2*len(y)))\n",
+    "    eliminated = (grad < 2*lambda_new - lambda_old) # True means the value gets eliminated\n",
+    "    eliminated = np.hstack((np.array([False]), eliminated)) # because intercept coefficient is not penalized\n",
+    "    return eliminated\n",
+    "\n",
+    "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
+    "def UAG_LM_SCAD_MCP(design_matrix, outcome, beta_0 = np.ones(1), tol=1e-2, maxit=500, _lambda=-.5, penalty=\"SCAD\", a=3.7, gamma=2., L_convex=1.1, add_intercept_column = True):\n",
     "    '''\n",
     "    Carry out the optimization.\n",
     "    '''\n",
-    "    X = design_matrix\n",
-    "    y = outcome\n",
+    "    X = design_matrix.copy()\n",
+    "    y = outcome.copy()\n",
     "    N = X.shape[0]\n",
-    "    beta=beta_0\n",
-    "    if np.all(beta_0 == np.ones(1)):\n",
+    "    if np.all(beta_0==np.ones(1)):\n",
     "        cov = (y - np.mean(y))@(X - 1/N*np.sum(X, 0).reshape(1,-1))\n",
     "        beta = np.sign(cov)\n",
     "    else:\n",
     "        beta = beta_0\n",
     "#     add design matrix column for the intercept, if it's not there already\n",
-    "    if np.all(X[:,0]==1.): # check if design matrix has included a column for intercept or not\n",
-    "        pass\n",
-    "    else:\n",
-    "        intercept_design = np.ones(N).reshape(-1, 1)\n",
-    "        X = np.hstack((intercept_design, X))\n",
-    "        beta = np.hstack((np.array([0.]),beta))\n",
+    "    if add_intercept_column == True:\n",
+    "        if np.any(X[:,0] != X[0,0]): # check if design matrix has included a column for intercept or not\n",
+    "            intercept_design = np.ones(N).reshape(-1, 1)\n",
+    "            X = np.hstack((intercept_design, X))\n",
+    "            beta = np.hstack((np.array([0.]), beta))\n",
     "    # passing other parameters\n",
     "    p = X.shape[1] # so here p includes the intercept design matrix column \n",
     "    smooth_grad = np.ones(p)\n",
@@ -345,13 +370,125 @@
     "\n",
     "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def solution_path_LM(design_matrix, outcome, lambda_, beta_0 = np.ones(1), tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.):\n",
+    "def solution_path_LM(design_matrix, outcome, lambda_, beta_0 = np.ones(1), tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2., add_intercept_column=True):\n",
     "    '''\n",
     "    Carry out the optimization.\n",
     "    '''\n",
-    "    beta_mat = np.zeros((len(lambda_)+1, design_matrix.shape[1]))\n",
+    "    #     add design matrix column for the intercept, if it's not there already\n",
+    "    if add_intercept_column == True:\n",
+    "        if np.any(X[:,0] != X[0,0]): # check if design matrix has included a column for intercept or not\n",
+    "            intercept_design = np.ones(N).reshape(-1, 1)\n",
+    "            _design_matrix = design_matrix.copy()\n",
+    "            _design_matrix = np.hstack((intercept_design, _design_matrix))\n",
+    "    beta_mat = np.zeros((len(lambda_)+1, _design_matrix.shape[1]))\n",
     "    for j in range(len(lambda_)):\n",
-    "        beta_mat[j+1,:] = UAG_LM_SCAD_MCP(design_matrix=design_matrix, outcome=outcome, beta_0 = beta_mat[j,:], tol=tol, maxit=maxit, _lambda=lambda_[j], penalty=penalty, a=a, gamma=gamma)[1]\n",
+    "        beta_mat[j+1,:] = UAG_LM_SCAD_MCP(design_matrix=_design_matrix, outcome=outcome, beta_0 = beta_mat[j,:], tol=tol, maxit=maxit, _lambda=lambda_[j], penalty=penalty, a=a, gamma=gamma, add_intercept_column=False)[1]\n",
+    "    return beta_mat[1:,:]\n",
+    "\n",
+    "\n",
+    "\n",
+    "# with strong rule \n",
+    "\n",
+    "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
+    "def UAG_LM_SCAD_MCP_strongrule(design_matrix, outcome, beta_0 = np.ones(1), tol=1e-2, maxit=500, _lambda=-.5, penalty=\"SCAD\", a=3.7, gamma=2., L_convex=1.1, add_intercept_column = True):\n",
+    "    '''\n",
+    "    Carry out the optimization.\n",
+    "    '''\n",
+    "    X = design_matrix.copy()\n",
+    "    y = outcome.copy()\n",
+    "    N = X.shape[0]\n",
+    "    if np.all(beta_0==np.ones(1)):\n",
+    "        cov = (y - np.mean(y))@(X - 1/N*np.sum(X, 0).reshape(1,-1))\n",
+    "        beta = np.sign(cov)\n",
+    "    else:\n",
+    "        beta = beta_0\n",
+    "#     add design matrix column for the intercept, if it's not there already\n",
+    "    if add_intercept_column == True:\n",
+    "        if np.any(X[:,0] != X[0,0]): # check if design matrix has included a column for intercept or not\n",
+    "            intercept_design = np.ones(N).reshape(-1, 1)\n",
+    "            X = np.hstack((intercept_design, X))\n",
+    "            beta = np.hstack((np.array([0.]), beta))\n",
+    "    if strongrule == True:\n",
+    "        elim = strong_rule_seq_LM(X, y, beta_old=np.zeros(), lambda_new=, lambda_old=)\n",
+    "        ### LOOK AT HERE!!!\n",
+    "        \n",
+    "    # passing other parameters\n",
+    "    p = X.shape[1] # so here p includes the intercept design matrix column \n",
+    "    smooth_grad = np.ones(p)\n",
+    "    beta_ag = beta.copy()\n",
+    "    beta_md = beta.copy()\n",
+    "    k = 0\n",
+    "    converged = False\n",
+    "    opt_alpha = 1.\n",
+    "#     L_convex = 1/N*np.max(np.linalg.eigvalsh(X@X.T)[-1]).item()\n",
+    "    if L_convex == 1.1:\n",
+    "        L_convex = 1/N*(np.linalg.eigvalsh(X@X.T)[-1])\n",
+    "    else:\n",
+    "        pass\n",
+    "    old_speed_norm = 1.\n",
+    "    speed_norm = 1.\n",
+    "    restart_k = 0\n",
+    "    \n",
+    "    if penalty == \"SCAD\":\n",
+    "#         L = np.max(np.array([L_convex, 1./(a-1)]))\n",
+    "        L = np.linalg.norm(np.array([L_convex, 1./(a-1)]), ord=np.infty)\n",
+    "        opt_beta = .99/L\n",
+    "        while not converged:\n",
+    "            k += 1\n",
+    "            if k <= maxit: # restarting\n",
+    "                if old_speed_norm > speed_norm and k - restart_k>=3: # in this case, restart\n",
+    "                    opt_alpha = 1. # restarting\n",
+    "                    restart_k = k # restarting\n",
+    "                else: # restarting\n",
+    "                    opt_alpha = 2/(1+(1+4/opt_alpha**2)**.5) #parameter settings based on minimizing Ghadimi and Lan's rate of convergence error upper bound \n",
+    "                opt_lambda = opt_beta/opt_alpha #parameter settings based on minimizing Ghadimi and Lan's rate of convergence error upper bound\n",
+    "                beta_md_old = beta_md.copy() # restarting\n",
+    "                beta_md = (1-opt_alpha)*beta_ag + opt_alpha*beta\n",
+    "                old_speed_norm = speed_norm # restarting\n",
+    "                speed_norm = np.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
+    "                smooth_grad = update_smooth_grad_SCAD(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, a=a)\n",
+    "                beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
+    "                beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
+    "#                 converged = np.all(np.max(np.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
+    "                converged = (np.linalg.norm(beta_md - beta_ag, ord=np.infty) < (tol*opt_beta))\n",
+    "            else:\n",
+    "                break\n",
+    "    else:\n",
+    "        L = np.linalg.norm(np.array([L_convex, 1./(gamma-1.)]), ord=np.infty)\n",
+    "        opt_beta = .99/L\n",
+    "        while not converged:\n",
+    "            k += 1\n",
+    "            if k <= maxit:\n",
+    "                if old_speed_norm > speed_norm and k - restart_k>=3: # in this case, restart\n",
+    "                    opt_alpha = 1. # restarting\n",
+    "                    restart_k = k # restarting\n",
+    "                else: # restarting\n",
+    "                    opt_alpha = 2/(1+(1+4/opt_alpha**2)**.5) #parameter settings based on minimizing Ghadimi and Lan's rate of convergence error upper bound\n",
+    "                opt_lambda = opt_beta/opt_alpha #parameter settings based on minimizing Ghadimi and Lan's rate of convergence error upper bound \n",
+    "                beta_md = (1-opt_alpha)*beta_ag + opt_alpha*beta\n",
+    "                smooth_grad = update_smooth_grad_MCP(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma)\n",
+    "                beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
+    "                beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
+    "#                 converged = np.all(np.max(np.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
+    "                converged = (np.linalg.norm(beta_md - beta_ag, ord=np.infty) < (tol*opt_beta))\n",
+    "            else:\n",
+    "                break\n",
+    "    return k, beta_md\n",
+    "\n",
+    "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
+    "def solution_path_LM_strongrule(design_matrix, outcome, lambda_, beta_0 = np.ones(1), tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2., add_intercept_column=True):\n",
+    "    '''\n",
+    "    Carry out the optimization.\n",
+    "    '''\n",
+    "    #     add design matrix column for the intercept, if it's not there already\n",
+    "    if add_intercept_column == True:\n",
+    "        if np.any(X[:,0] != X[0,0]): # check if design matrix has included a column for intercept or not\n",
+    "            intercept_design = np.ones(N).reshape(-1, 1)\n",
+    "            _design_matrix = design_matrix.copy()\n",
+    "            _design_matrix = np.hstack((intercept_design, _design_matrix))\n",
+    "    beta_mat = np.zeros((len(lambda_)+1, _design_matrix.shape[1]))\n",
+    "    for j in range(len(lambda_)):\n",
+    "        beta_mat[j+1,:] = UAG_LM_SCAD_MCP(design_matrix=_design_matrix, outcome=outcome, beta_0 = beta_mat[j,:], tol=tol, maxit=maxit, _lambda=lambda_[j], penalty=penalty, a=a, gamma=gamma, add_intercept_column=False)[1]\n",
     "    return beta_mat[1:,:]\n"
    ]
   },
@@ -364,11 +501,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-19T23:05:06.075340Z",
-     "start_time": "2022-05-19T23:04:45.781267Z"
+     "end_time": "2022-05-22T17:00:19.610402Z",
+     "start_time": "2022-05-22T17:00:01.694402Z"
     },
     "code_folding": []
    },
@@ -385,7 +522,7 @@
     "X = np.random.multivariate_normal(mean, X_cov, N)\n",
     "X -= np.mean(X,0).reshape(1,-1)\n",
     "X /= np.std(X,0)\n",
-    "intercept_design_column = np.ones(N).reshape(-1, 1)\n",
+    "intercept_design_column = np.ones(N).reshape(N, 1)\n",
     "X_sim = np.concatenate((intercept_design_column, X), 1)\n",
     "true_sigma_sim = np.sqrt(true_beta.T@X_cov@true_beta/SNR)\n",
     "true_beta_intercept = np.concatenate((np.array([1.23]), true_beta)) # here just define the intercept to be 1.23 for simulated data \n",
@@ -399,11 +536,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-19T23:05:53.334109Z",
-     "start_time": "2022-05-19T23:05:48.347110Z"
+     "end_time": "2022-05-22T17:00:30.971404Z",
+     "start_time": "2022-05-22T17:00:19.611402Z"
     }
    },
    "outputs": [
@@ -411,7 +548,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "61.7 ms ± 872 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "145 ms ± 21.7 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -421,11 +558,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-19T23:05:11.439340Z",
-     "start_time": "2022-05-19T23:05:11.424341Z"
+     "end_time": "2022-05-22T17:00:30.987402Z",
+     "start_time": "2022-05-22T17:00:30.972403Z"
     }
    },
    "outputs": [
@@ -466,7 +603,7 @@
        "         0.00000000e+00]))"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,11 +614,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-19T23:05:11.629344Z",
-     "start_time": "2022-05-19T23:05:11.551342Z"
+     "end_time": "2022-05-22T17:00:31.145404Z",
+     "start_time": "2022-05-22T17:00:30.989405Z"
     }
    },
    "outputs": [
@@ -507,11 +644,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-19T23:05:11.849365Z",
-     "start_time": "2022-05-19T23:05:11.834342Z"
+     "end_time": "2022-05-22T17:00:31.161403Z",
+     "start_time": "2022-05-22T17:00:31.146404Z"
     }
    },
    "outputs": [
