--- a/logistic_SCAD_MCP_np_MODULE.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-19T23:05:01.418342Z",
-     "start_time": "2022-05-19T23:05:00.275344Z"
+     "end_time": "2022-05-22T17:00:04.764433Z",
+     "start_time": "2022-05-22T17:00:03.770404Z"
     }
    },
    "outputs": [],
@@ -50,8 +50,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-19T23:05:01.482340Z",
-     "start_time": "2022-05-19T23:05:01.420340Z"
+     "end_time": "2022-05-22T17:00:04.812439Z",
+     "start_time": "2022-05-22T17:00:04.765405Z"
     }
    },
    "outputs": [],
@@ -172,9 +172,10 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-19T23:05:01.530339Z",
-     "start_time": "2022-05-19T23:05:01.484342Z"
-    }
+     "end_time": "2022-05-22T17:00:04.860405Z",
+     "start_time": "2022-05-22T17:00:04.813406Z"
+    },
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -215,27 +216,71 @@
     "    error = y - X@x_temp\n",
     "    return (error.T@error)/(2*N) + np.sum(SCAD(x_temp, lambda_=_lambda, gamma=gamma))\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def UAG_logistic_SCAD_MCP(design_matrix, outcome, beta_0 = np.ones(1), tol=1e-2, maxit=500, _lambda=-.5, penalty=\"SCAD\", a=3.7, gamma=2., L_convex = 1.1):\n",
+    "def lambda_max_logistic(X, y):\n",
+    "    X_temp = X.copy()\n",
+    "    X_temp = X_temp[:,1:]\n",
+    "    X_temp -= np.mean(X_temp,0).reshape(1,-1)\n",
+    "    X_temp /= np.std(X_temp,0)\n",
+    "    grad_at_0 = np.abs((y-np.mean(y))@X_temp/(2*len(y))) #  or -.5???\n",
+    "    lambda_max = np.max(grad_at_0[1:])\n",
+    "    return lambda_max\n",
+    "\n",
+    "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
+    "def strong_rule_seq_logistic(X, y, beta_old, lambda_new, lambda_old):\n",
+    "# suppose that X is already standardized to make it faster, and X has intercept column\n",
+    "    X_temp = X.copy()\n",
+    "    X_temp = X_temp[:,1:]\n",
+    "    X_temp -= np.mean(X_temp,0).reshape(1,-1)\n",
+    "    X_temp /= np.std(X_temp,0)\n",
+    "    grad = np.abs((y-np.tanh(X@beta_old/2)/2-.5)@X_temp/(2*len(y)))\n",
+    "    eliminated = (grad < 2*lambda_new - lambda_old) # True means the value gets eliminated\n",
+    "    eliminated = np.hstack((np.array([False]), eliminated)) # because intercept coefficient is not penalized\n",
+    "    return eliminated\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
+    "def UAG_logistic_SCAD_MCP(design_matrix, outcome, beta_0 = np.ones(1), tol=1e-2, maxit=500, _lambda=-.5, penalty=\"SCAD\", a=3.7, gamma=2., L_convex = 1.1, add_intercept_column=True):\n",
     "    '''\n",
     "    Carry out the optimization.\n",
     "    '''\n",
     "    X = design_matrix\n",
     "    y = outcome\n",
     "    N = X.shape[0]\n",
-    "    beta=beta_0\n",
     "    if np.all(beta_0 == np.ones(1)):\n",
     "        cov = (y - np.mean(y))@(X - 1/N*np.sum(X, 0).reshape(1,-1))\n",
     "        beta = np.sign(cov)\n",
     "    else:\n",
     "        beta = beta_0\n",
     "#     add design matrix column for the intercept, if it's not there already\n",
-    "    if np.all(X[:,0]==1.): # check if design matrix has included a column for intercept or not\n",
-    "        pass\n",
-    "    else:\n",
-    "        intercept_design = np.ones(N).reshape(-1, 1)\n",
-    "        X = np.hstack((intercept_design, X))\n",
-    "        beta = np.hstack((np.array([0.]),beta))\n",
+    "    if add_intercept_column == True:\n",
+    "        if np.any(X[:,0] != X[0,0]): # check if design matrix has included a column for intercept or not\n",
+    "            intercept_design = np.ones(N).reshape(-1, 1)\n",
+    "            X = np.hstack((intercept_design, X))\n",
+    "            beta = np.hstack((np.array([0.]),beta))\n",
     "    # passing other parameters\n",
     "    p = X.shape[1] # so here p includes the intercept design matrix column \n",
     "    smooth_grad = np.ones(p)\n",
@@ -345,13 +390,18 @@
     "\n",
     "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def solution_path_logistic(design_matrix, outcome, lambda_, beta_0 = np.ones(1), tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.):\n",
+    "def solution_path_logistic(design_matrix, outcome, lambda_, beta_0 = np.ones(1), tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2., add_intercept_column=True):\n",
     "    '''\n",
     "    Carry out the optimization.\n",
     "    '''\n",
-    "    beta_mat = np.zeros((len(lambda_)+1, design_matrix.shape[1]))\n",
+    "    if add_intercept_column == True:\n",
+    "        if np.any(X[:,0] != X[0,0]): # check if design matrix has included a column for intercept or not\n",
+    "            intercept_design = np.ones(N).reshape(-1, 1)\n",
+    "            _design_matrix = design_matrix.copy()\n",
+    "            _design_matrix = np.hstack((intercept_design, _design_matrix))\n",
+    "    beta_mat = np.zeros((len(lambda_)+1, _design_matrix.shape[1]))\n",
     "    for j in range(len(lambda_)):\n",
-    "        beta_mat[j+1,:] = UAG_logistic_SCAD_MCP(design_matrix=design_matrix, outcome=outcome, beta_0 = beta_mat[j,:], tol=tol, maxit=maxit, _lambda=lambda_[j], penalty=penalty, a=a, gamma=gamma)[1]\n",
+    "        beta_mat[j+1,:] = UAG_logistic_SCAD_MCP(design_matrix=_design_matrix, outcome=outcome, beta_0 = beta_mat[j,:], tol=tol, maxit=maxit, _lambda=lambda_[j], penalty=penalty, a=a, gamma=gamma, add_intercept_column=False)[1]\n",
     "    return beta_mat[1:,:]\n"
    ]
   },
@@ -367,8 +417,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-19T23:05:27.970054Z",
-     "start_time": "2022-05-19T23:05:01.532341Z"
+     "end_time": "2022-05-22T17:00:28.811403Z",
+     "start_time": "2022-05-22T17:00:04.861405Z"
     },
     "code_folding": []
    },
@@ -401,8 +451,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-19T23:05:35.834054Z",
-     "start_time": "2022-05-19T23:05:27.971054Z"
+     "end_time": "2022-05-22T17:00:30.716402Z",
+     "start_time": "2022-05-22T17:00:28.812403Z"
     }
    },
    "outputs": [
@@ -410,7 +460,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "97.2 ms ± 3.55 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "242 ms ± 14.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -423,8 +473,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-19T23:05:35.850055Z",
-     "start_time": "2022-05-19T23:05:35.835056Z"
+     "end_time": "2022-05-22T17:00:30.939403Z",
+     "start_time": "2022-05-22T17:00:30.717403Z"
     }
    },
    "outputs": [
