--- a/LM_SCAD_MCP_np_MODULE.ipynb
+++ b/LM_SCAD_MCP_np_MODULE.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-25T02:09:32.982779Z",
-     "start_time": "2022-05-25T02:09:32.033039Z"
+     "end_time": "2022-05-26T02:20:19.953664Z",
+     "start_time": "2022-05-26T02:20:18.987880Z"
     }
    },
    "outputs": [],
@@ -50,8 +50,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-25T02:09:33.175625Z",
-     "start_time": "2022-05-25T02:09:32.982779Z"
+     "end_time": "2022-05-26T02:20:20.211222Z",
+     "start_time": "2022-05-26T02:20:19.953664Z"
     }
    },
    "outputs": [],
@@ -174,8 +174,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-25T02:09:33.238127Z",
-     "start_time": "2022-05-25T02:09:33.175625Z"
+     "end_time": "2022-05-26T02:20:20.290216Z",
+     "start_time": "2022-05-26T02:20:20.212159Z"
     }
    },
    "outputs": [],
@@ -391,8 +391,8 @@
     "\n",
     "# with strong rule \n",
     "\n",
-    "# @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def UAG_LM_SCAD_MCP_strongrule(design_matrix, outcome, beta_0 = np.ones(1), tol=1e-2, maxit=500, _lambda=.5, penalty=\"SCAD\", a=3.7, gamma=2., L_convex=1.1, add_intercept_column = True, strongrule=True):\n",
+    "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
+    "def _UAG_LM_SCAD_MCP_strongrule(design_matrix, outcome, beta_0 = np.ones(1), tol=1e-2, maxit=500, _lambda=.5, penalty=\"SCAD\", a=3.7, gamma=2., L_convex=1.1, add_intercept_column = True, strongrule=True):\n",
     "    '''\n",
     "    Carry out the optimization.\n",
     "    '''\n",
@@ -478,21 +478,29 @@
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = np.all(np.max(np.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
     "#             converged = (np.linalg.norm(beta_md - beta_ag, ord=np.infty) < (tol*opt_beta))\n",
-    "    if strongrule == True:\n",
-    "        _beta_output = np.zeros((p_original))\n",
-    "#         _ = np.argwhere(np.logical_not(elim)).flatten()\n",
-    "#         print(_)\n",
-    "#         for j in range(len(_)):\n",
-    "#             if j<10:\n",
-    "#                 print(j)\n",
-    "#                 print(_[j])\n",
-    "#             _beta_output[_[j]] = beta_md[j]\n",
-    "#             if j<10:\n",
-    "#                 print(_beta_output[_[j]])\n",
-    "        _beta_output[~elim] = beta_md  # this line of code can't compile\n",
-    "    else:\n",
-    "        _beta_output = beta_md\n",
-    "    return k, _beta_output\n",
+    "#     if strongrule == True:\n",
+    "#         _beta_output = np.zeros((p_original))\n",
+    "# #         _ = np.argwhere(np.logical_not(elim)).flatten()\n",
+    "# #         print(_)\n",
+    "# #         for j in range(len(_)):\n",
+    "# #             if j<10:\n",
+    "# #                 print(j)\n",
+    "# #                 print(_[j])\n",
+    "# #             _beta_output[_[j]] = beta_md[j]\n",
+    "# #             if j<10:\n",
+    "# #                 print(_beta_output[_[j]])\n",
+    "#         _beta_output[~elim] = beta_md  # this line of code can't compile\n",
+    "#     else:\n",
+    "#         _beta_output = beta_md\n",
+    "    return k, beta_md, elim\n",
+    "\n",
+    "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
+    "def UAG_LM_SCAD_MCP_strongrule(design_matrix, outcome, beta_0 = np.ones(1), tol=1e-2, maxit=500, _lambda=.5, penalty=\"SCAD\", a=3.7, gamma=2., L_convex=1.1, add_intercept_column = True, strongrule=True):\n",
+    "    _k, _beta_md, _elim = _UAG_LM_SCAD_MCP_strongrule(design_matrix=design_matrix, outcome=outcome, beta_0 = beta_0, tol=tol, maxit=maxit, _lambda=_lambda, penalty=penalty, a=a, gamma=gamma, L_convex=L_convex, add_intercept_column = add_intercept_column, strongrule=strongrule)\n",
+    "    output_beta = np.zeros(len(_elim))\n",
+    "    output_beta[np.logical_not(_elim)] = _beta_md\n",
+    "    return _k, output_beta\n",
+    "\n",
     "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def solution_path_LM_strongrule(design_matrix, outcome, lambda_, beta_0 = np.ones(1), tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2., add_intercept_column=True):\n",
@@ -525,8 +533,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-25T02:10:16.435701Z",
-     "start_time": "2022-05-25T02:09:33.238127Z"
+     "end_time": "2022-05-26T02:20:46.160503Z",
+     "start_time": "2022-05-26T02:20:20.291159Z"
     }
    },
    "outputs": [
@@ -547,7 +555,7 @@
       "  -8.95442224e-02  0.00000000e+00]\n",
       " [ 1.25529526e+00  1.86767007e+00 -1.90691276e+00 ...  1.00662533e-01\n",
       "  -9.61300285e-02  1.36140337e-04]]\n",
-      "2.97 s ± 24 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2.83 s ± 22 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -594,8 +602,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-25T02:10:32.322842Z",
-     "start_time": "2022-05-25T02:10:16.435701Z"
+     "end_time": "2022-05-26T02:21:03.965207Z",
+     "start_time": "2022-05-26T02:20:46.161503Z"
     },
     "code_folding": []
    },
@@ -629,8 +637,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-25T02:10:34.767679Z",
-     "start_time": "2022-05-25T02:10:32.322842Z"
+     "end_time": "2022-05-26T02:21:10.515934Z",
+     "start_time": "2022-05-26T02:21:03.965207Z"
     }
    },
    "outputs": [
@@ -638,7 +646,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "250 ms ± 4.78 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "814 ms ± 6.22 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -651,8 +659,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-25T02:10:34.783679Z",
-     "start_time": "2022-05-25T02:10:34.768678Z"
+     "end_time": "2022-05-26T02:21:10.531935Z",
+     "start_time": "2022-05-26T02:21:10.516935Z"
     }
    },
    "outputs": [
@@ -660,7 +668,7 @@
      "data": {
       "text/plain": [
        "(66,\n",
-       " array([ 1.28604256,  2.15247208, -1.92370802, ...,  0.        ,\n",
+       " array([ 1.28610153,  2.15247208, -1.92370802, ...,  0.        ,\n",
        "         0.16219557,  0.        ]))"
       ]
      },
@@ -678,8 +686,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-25T02:10:34.910679Z",
-     "start_time": "2022-05-25T02:10:34.784680Z"
+     "end_time": "2022-05-26T02:21:10.660758Z",
+     "start_time": "2022-05-26T02:21:10.532935Z"
     },
     "scrolled": true
    },
@@ -709,8 +717,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-25T02:10:34.926678Z",
-     "start_time": "2022-05-25T02:10:34.911683Z"
+     "end_time": "2022-05-26T02:21:10.676759Z",
+     "start_time": "2022-05-26T02:21:10.661758Z"
     }
    },
    "outputs": [
