--- a/logistic_SCAD_MCP_np_numba_MODULE.ipynb
+++ b/logistic_SCAD_MCP_np_numba_MODULE.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-26T02:36:59.524758Z",
-     "start_time": "2022-05-26T02:36:58.573624Z"
+     "end_time": "2022-07-10T23:54:40.977849Z",
+     "start_time": "2022-07-10T23:54:38.711062Z"
     }
    },
    "outputs": [],
@@ -50,8 +50,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-26T02:36:59.728963Z",
-     "start_time": "2022-05-26T02:36:59.524758Z"
+     "end_time": "2022-07-10T23:54:41.440631Z",
+     "start_time": "2022-07-10T23:54:40.977849Z"
     }
    },
    "outputs": [],
@@ -174,8 +174,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-26T02:36:59.808151Z",
-     "start_time": "2022-05-26T02:36:59.729965Z"
+     "end_time": "2022-07-10T23:54:41.520632Z",
+     "start_time": "2022-07-10T23:54:41.441634Z"
     }
    },
    "outputs": [],
@@ -526,8 +526,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-26T02:37:16.560973Z",
-     "start_time": "2022-05-26T02:36:59.809151Z"
+     "end_time": "2022-07-10T23:55:04.939380Z",
+     "start_time": "2022-07-10T23:54:41.522631Z"
     }
    },
    "outputs": [],
@@ -559,8 +559,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-26T02:37:47.680788Z",
-     "start_time": "2022-05-26T02:37:16.560973Z"
+     "end_time": "2022-07-10T23:55:48.622948Z",
+     "start_time": "2022-07-10T23:55:04.940381Z"
     }
    },
    "outputs": [
@@ -568,8 +568,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "60.9 ms ± 985 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "3.26 s ± 70 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "90.7 ms ± 7.22 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "4.46 s ± 437 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -583,8 +583,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-26T02:37:47.696415Z",
-     "start_time": "2022-05-26T02:37:47.680788Z"
+     "end_time": "2022-07-10T23:55:48.640019Z",
+     "start_time": "2022-07-10T23:55:48.624391Z"
     }
    },
    "outputs": [
