--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -205,6 +205,35 @@
     "        MI_UKBB[j] = MI_binary(_outcome=outcome, _SNP=_SNP)\n",
     "    _percentile = np.percentile(MI_UKBB, percentile)\n",
     "    return bed1_sid[MI_UKBB > _percentile]\n",
+    "\n",
+    "\n",
+    "def continuous_filter_parallel(bed_file, bim_file, fam_file, outcome, percentile, a_min=100., a_max=250.):\n",
+    "    bed1 = open_bed(bed_file,fam_filepath=fam_file, bim_filepath=bim_file)\n",
+    "    gene_iid = np.array(list(bed1.iid))\n",
+    "    bed1_sid = np.array(list(bed1.sid))\n",
+    "    MI_UKBB = np.zeros_like(bed1_sid)\n",
+    "    for j in range(len(MI_UKBB)):\n",
+    "        _SNP = bed1.read(np.s_[:,j],dtype=np.int8).flatten()\n",
+    "        _SNP = _SNP[np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]] # get gene iid also in outcome iid\n",
+    "        _outcome = outcome[_SNP != -127] # remove missing SNP in outcome\n",
+    "        _SNP = _SNP[_SNP != -127] # remove missing SNP\n",
+    "        MI_UKBB[j] = MI_continuous(_outcome=outcome, _SNP=_SNP)\n",
+    "    _percentile = np.percentile(MI_UKBB, percentile)\n",
+    "    return bed1_sid[MI_UKBB > _percentile]\n",
+    "\n",
+    "def binary_filter_parallel(bed_file, bim_file, fam_file, outcome, percentile, prop=.1, a_min=100., a_max=250.):\n",
+    "    bed1 = open_bed(bed_file,fam_filepath=fam_file, bim_filepath=bim_file)\n",
+    "    gene_iid = np.array(list(bed1.iid))\n",
+    "    bed1_sid = np.array(list(bed1.sid))\n",
+    "    MI_UKBB = np.zeros_like(bed1_sid)\n",
+    "    for j in range(len(MI_UKBB)):\n",
+    "        _SNP = bed1.read(np.s_[:,j],dtype=np.int8).flatten()\n",
+    "        _SNP = _SNP[np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]] # get gene iid also in outcome iid\n",
+    "        _outcome = outcome[_SNP != -127] # remove missing SNP in outcome\n",
+    "        _SNP = _SNP[_SNP != -127] # remove missing SNP\n",
+    "        MI_UKBB[j] = MI_binary(_outcome=outcome, _SNP=_SNP)\n",
+    "    _percentile = np.percentile(MI_UKBB, percentile)\n",
+    "    return bed1_sid[MI_UKBB > _percentile]\n",
     "\n"
    ]
   },
