--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-17T20:17:51.897870Z",
-     "start_time": "2022-05-17T20:17:50.587872Z"
+     "end_time": "2022-07-11T00:30:05.494353Z",
+     "start_time": "2022-07-11T00:30:05.440707Z"
     }
    },
    "outputs": [
@@ -16,10 +16,10 @@
      "evalue": "No module named 'pysnptools'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_8872\\1947859088.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;31m# import os\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mpysnptools\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdistreader\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mBgen\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDistMemMap\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mpathlib\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPath\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pysnptools'"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 11>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# import os\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpysnptools\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdistreader\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Bgen, DistMemMap\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpathlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Path\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pysnptools'"
      ]
     }
    ],
@@ -44,7 +44,8 @@
     "from scipy.stats import gaussian_kde\n",
     "from KDEpy import FFTKDE\n",
     "from numba import jit\n",
-    "from pybgen import PyBGEN\n"
+    "# from pybgen import PyBGEN\n",
+    "from multiprocessing import Pool, cpu_count\n"
    ]
   },
   {
@@ -207,31 +208,52 @@
     "    return bed1_sid[MI_UKBB > _percentile]\n",
     "\n",
     "\n",
-    "def continuous_filter_parallel(bed_file, bim_file, fam_file, outcome, percentile, a_min=100., a_max=250.):\n",
+    "def continuous_filter_parallel(bed_file, bim_file, fam_file, outcome, percentile, a_min=100., a_max=250., chuck_size=60000):\n",
     "    bed1 = open_bed(bed_file,fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "    gene_iid = np.array(list(bed1.iid))\n",
     "    bed1_sid = np.array(list(bed1.sid))\n",
-    "    MI_UKBB = np.zeros_like(bed1_sid)\n",
-    "    for j in range(len(MI_UKBB)):\n",
-    "        _SNP = bed1.read(np.s_[:,j],dtype=np.int8).flatten()\n",
-    "        _SNP = _SNP[np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]] # get gene iid also in outcome iid\n",
-    "        _outcome = outcome[_SNP != -127] # remove missing SNP in outcome\n",
-    "        _SNP = _SNP[_SNP != -127] # remove missing SNP\n",
-    "        MI_UKBB[j] = MI_continuous(_outcome=outcome, _SNP=_SNP)\n",
+    "    def _continuous_filter_slice(_slice):\n",
+    "        _MI_slice = np.zeros_like(_slice)\n",
+    "        k = 0\n",
+    "        for j in _slice:\n",
+    "            _SNP = bed1.read(np.s_[:,j],dtype=np.int8).flatten()\n",
+    "            _SNP = _SNP[np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]] # get gene iid also in outcome iid\n",
+    "            _outcome = outcome[_SNP != -127] # remove missing SNP in outcome\n",
+    "            _SNP = _SNP[_SNP != -127] # remove missing SNP\n",
+    "            _MI_slice[k] = MI_continuous(_outcome=outcome, _SNP=_SNP)\n",
+    "            k += 1\n",
+    "        return _MI_slice\n",
+    "    # multiprocessing starts here\n",
+    "    ind = np.arange(len(gene_iid))\n",
+    "    n_slices = np.floor(ind/chuck_size)\n",
+    "    with Pool(cpu_count()) as p:\n",
+    "        MI_UKBB = p.map(_continuous_filter_slice, np.array_split(ind, n_slices))\n",
+    "    MI_UKBB = np.hstack(MI_UKBB)\n",
     "    _percentile = np.percentile(MI_UKBB, percentile)\n",
     "    return bed1_sid[MI_UKBB > _percentile]\n",
     "\n",
-    "def binary_filter_parallel(bed_file, bim_file, fam_file, outcome, percentile, prop=.1, a_min=100., a_max=250.):\n",
+    "\n",
+    "def binary_filter_parallel(bed_file, bim_file, fam_file, outcome, percentile, a_min=100., a_max=250., chuck_size=60000):\n",
     "    bed1 = open_bed(bed_file,fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "    gene_iid = np.array(list(bed1.iid))\n",
     "    bed1_sid = np.array(list(bed1.sid))\n",
-    "    MI_UKBB = np.zeros_like(bed1_sid)\n",
-    "    for j in range(len(MI_UKBB)):\n",
-    "        _SNP = bed1.read(np.s_[:,j],dtype=np.int8).flatten()\n",
-    "        _SNP = _SNP[np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]] # get gene iid also in outcome iid\n",
-    "        _outcome = outcome[_SNP != -127] # remove missing SNP in outcome\n",
-    "        _SNP = _SNP[_SNP != -127] # remove missing SNP\n",
-    "        MI_UKBB[j] = MI_binary(_outcome=outcome, _SNP=_SNP)\n",
+    "    def _binary_filter_slice(_slice):\n",
+    "        _MI_slice = np.zeros_like(_slice)\n",
+    "        k = 0\n",
+    "        for j in _slice:\n",
+    "            _SNP = bed1.read(np.s_[:,j],dtype=np.int8).flatten()\n",
+    "            _SNP = _SNP[np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]] # get gene iid also in outcome iid\n",
+    "            _outcome = outcome[_SNP != -127] # remove missing SNP in outcome\n",
+    "            _SNP = _SNP[_SNP != -127] # remove missing SNP\n",
+    "            _MI_slice[k] = MI_binary(_outcome=outcome, _SNP=_SNP)\n",
+    "            k += 1\n",
+    "        return _MI_slice\n",
+    "    # multiprocessing starts here\n",
+    "    ind = np.arange(len(gene_iid))\n",
+    "    n_slices = np.floor(ind/chuck_size)\n",
+    "    with Pool(cpu_count()) as p:\n",
+    "        MI_UKBB = p.map(_binary_filter_slice, np.array_split(ind, n_slices))\n",
+    "    MI_UKBB = np.hstack(MI_UKBB)\n",
     "    _percentile = np.percentile(MI_UKBB, percentile)\n",
     "    return bed1_sid[MI_UKBB > _percentile]\n",
     "\n"
@@ -290,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -309,6 +331,16 @@
    "latex_user_defs": false,
    "report_style_numbering": false,
    "user_envs_cfg": false
+  },
+  "nbTranslate": {
+   "displayLangs": [
+    "*"
+   ],
+   "hotkey": "alt-t",
+   "langInMainMenu": true,
+   "sourceLang": "en",
+   "targetLang": "fr",
+   "useGoogleTranslate": true
   },
   "toc": {
    "base_numbering": 1,
