--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -6,8 +6,7 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-11T00:30:05.494353Z",
-     "start_time": "2022-07-11T00:30:05.440707Z"
+     "start_time": "2022-07-11T03:28:44.054Z"
     }
    },
    "outputs": [],
@@ -41,8 +40,7 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-19T15:29:25.043327Z",
-     "start_time": "2022-05-19T15:29:25.014298Z"
+     "start_time": "2022-07-11T03:28:44.793Z"
     }
    },
    "outputs": [],
@@ -151,7 +149,7 @@
     "    return mi_temp\n",
     "\n",
     "\n",
-    "def continuous_filter(bed_file, bim_file, fam_file, outcome, percentile, a_min=100., a_max=250.):\n",
+    "def continuous_filter(bed_file, bim_file, fam_file, outcome, percentile, a_min=100., a_max=250., N=500):\n",
     "    bed1 = open_bed(bed_file,fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "    gene_iid = np.array(list(bed1.iid))\n",
     "    bed1_sid = np.array(list(bed1.sid))\n",
@@ -161,11 +159,11 @@
     "        _SNP = _SNP[np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]] # get gene iid also in outcome iid\n",
     "        _outcome = outcome[_SNP != -127] # remove missing SNP in outcome\n",
     "        _SNP = _SNP[_SNP != -127] # remove missing SNP\n",
-    "        MI_UKBB[j] = MI_continuous(_outcome=outcome, _SNP=_SNP)\n",
+    "        MI_UKBB[j] = MI_continuous(a=outcome, b=_SNP, a_min = a_min, a_max = a_max, N=N)\n",
     "    _percentile = np.percentile(MI_UKBB, percentile)\n",
     "    return bed1_sid[MI_UKBB > _percentile]\n",
     "\n",
-    "def binary_filter(bed_file, bim_file, fam_file, outcome, percentile, prop=.1, a_min=100., a_max=250.):\n",
+    "def binary_filter(bed_file, bim_file, fam_file, outcome, percentile, prop=.1, a_min=100., a_max=250., N=500):\n",
     "    bed1 = open_bed(bed_file,fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "    gene_iid = np.array(list(bed1.iid))\n",
     "    bed1_sid = np.array(list(bed1.sid))\n",
@@ -175,12 +173,12 @@
     "        _SNP = _SNP[np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]] # get gene iid also in outcome iid\n",
     "        _outcome = outcome[_SNP != -127] # remove missing SNP in outcome\n",
     "        _SNP = _SNP[_SNP != -127] # remove missing SNP\n",
-    "        MI_UKBB[j] = MI_binary(_outcome=outcome, _SNP=_SNP)\n",
+    "        MI_UKBB[j] = MI_binary(a=outcome, b=_SNP, a_min = a_min, a_max = a_max, N=N)\n",
     "    _percentile = np.percentile(MI_UKBB, percentile)\n",
     "    return bed1_sid[MI_UKBB > _percentile]\n",
     "\n",
     "\n",
-    "def continuous_filter_parallel(bed_file, bim_file, fam_file, outcome, percentile, a_min=100., a_max=250., chuck_size=60000):\n",
+    "def continuous_filter_parallel(bed_file, bim_file, fam_file, outcome, percentile, a_min=100., a_max=250., N=500, chuck_size=60000):\n",
     "    bed1 = open_bed(bed_file,fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "    gene_iid = np.array(list(bed1.iid))\n",
     "    bed1_sid = np.array(list(bed1.sid))\n",
@@ -192,7 +190,7 @@
     "            _SNP = _SNP[np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]] # get gene iid also in outcome iid\n",
     "            _outcome = outcome[_SNP != -127] # remove missing SNP in outcome\n",
     "            _SNP = _SNP[_SNP != -127] # remove missing SNP\n",
-    "            _MI_slice[k] = MI_continuous(_outcome=outcome, _SNP=_SNP)\n",
+    "            _MI_slice[k] = MI_continuous(a=outcome, b=_SNP, a_min = a_min, a_max = a_max, N=N)\n",
     "            k += 1\n",
     "        return _MI_slice\n",
     "    # multiprocessing starts here\n",
@@ -205,7 +203,7 @@
     "    return bed1_sid[MI_UKBB > _percentile]\n",
     "\n",
     "\n",
-    "def binary_filter_parallel(bed_file, bim_file, fam_file, outcome, percentile, a_min=100., a_max=250., chuck_size=60000):\n",
+    "def binary_filter_parallel(bed_file, bim_file, fam_file, outcome, percentile, a_min=100., a_max=250., N=500, chuck_size=60000):\n",
     "    bed1 = open_bed(bed_file,fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "    gene_iid = np.array(list(bed1.iid))\n",
     "    bed1_sid = np.array(list(bed1.sid))\n",
@@ -217,7 +215,7 @@
     "            _SNP = _SNP[np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]] # get gene iid also in outcome iid\n",
     "            _outcome = outcome[_SNP != -127] # remove missing SNP in outcome\n",
     "            _SNP = _SNP[_SNP != -127] # remove missing SNP\n",
-    "            _MI_slice[k] = MI_binary(_outcome=outcome, _SNP=_SNP)\n",
+    "            _MI_slice[k] = MI_binary(a=outcome, b=_SNP, a_min = a_min, a_max = a_max, N=N)\n",
     "            k += 1\n",
     "        return _MI_slice\n",
     "    # multiprocessing starts here\n",
@@ -237,8 +235,7 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-19T15:30:05.729471Z",
-     "start_time": "2022-05-19T15:30:05.709823Z"
+     "start_time": "2022-07-11T03:28:45.603Z"
     }
    },
    "outputs": [],
@@ -251,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56a634eb",
+   "id": "b54d51a3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -273,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
