--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -47,7 +47,7 @@
     "from scipy.stats import gaussian_kde\n",
     "from KDEpy import FFTKDE\n",
     "# from pybgen import PyBGEN\n",
-    "import multiprocessing as mp"
+    "import multiprocess as mp"
    ]
   },
   {
@@ -62,7 +62,7 @@
    },
    "outputs": [],
    "source": [
-    "import multiprocessing as mp"
+    "import multiprocess as mp"
    ]
   },
   {
@@ -460,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
