--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -176,7 +176,7 @@
     "    gene_ind = np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]\n",
     "    MI_UKBB = np.zeros_like(bed1_sid)\n",
     "    for j in range(len(MI_UKBB)):\n",
-    "        _SNP = bed1.read(np.s_[:,j],dtype=np.int8).flatten()\n",
+    "        _SNP = bed1.read(np.s_[:,j], dtype=np.int8).flatten()\n",
     "        _SNP = _SNP[gene_ind] # get gene iid also in outcome iid\n",
     "        _outcome = outcome[_SNP != -127] # remove missing SNP in outcome\n",
     "        _SNP = _SNP[_SNP != -127] # remove missing SNP\n",
@@ -195,7 +195,7 @@
     "        _MI_slice = np.zeros_like(_slice)\n",
     "        k = 0\n",
     "        for j in _slice:\n",
-    "            _SNP = bed1.read(np.s_[:,j],dtype=np.int8).flatten()\n",
+    "            _SNP = bed1.read(np.s_[:,j], dtype=np.int8).flatten()\n",
     "            _SNP = _SNP[gene_ind] # get gene iid also in outcome iid\n",
     "            _outcome = outcome[_SNP != -127] # remove missing SNP in outcome\n",
     "            _SNP = _SNP[_SNP != -127] # remove missing SNP\n",
@@ -203,8 +203,8 @@
     "            k += 1\n",
     "        return _MI_slice\n",
     "    # multiprocessing starts here\n",
-    "    ind = np.arange(len(gene_iid))\n",
-    "    n_slices = np.floor(len(gene_iid)/chunck_size)\n",
+    "    ind = np.arange(len(gene_sid))\n",
+    "    n_slices = np.floor(len(ind)/chunck_size)\n",
     "    with mp.Pool(mp.cpu_count()) as p:\n",
     "        MI_UKBB = p.map(_continuous_filter_slice, np.array_split(ind, n_slices))\n",
     "    MI_UKBB = np.hstack(MI_UKBB)\n",
@@ -222,7 +222,7 @@
     "        _MI_slice = np.zeros_like(_slice)\n",
     "        k = 0\n",
     "        for j in _slice:\n",
-    "            _SNP = bed1.read(np.s_[:,j],dtype=np.int8).flatten()\n",
+    "            _SNP = bed1.read(np.s_[:,j], dtype=np.int8).flatten()\n",
     "            _SNP = _SNP[gene_ind] # get gene iid also in outcome iid\n",
     "            _outcome = outcome[_SNP != -127] # remove missing SNP in outcome\n",
     "            _SNP = _SNP[_SNP != -127] # remove missing SNP\n",
@@ -230,8 +230,8 @@
     "            k += 1\n",
     "        return _MI_slice\n",
     "    # multiprocessing starts here\n",
-    "    ind = np.arange(len(gene_iid))\n",
-    "    n_slices = np.floor(len(gene_iid)/chunck_size)\n",
+    "    ind = np.arange(len(gene_sid))\n",
+    "    n_slices = np.floor(len(ind)/chunck_size)\n",
     "    with mp.Pool(mp.cpu_count()) as p:\n",
     "        MI_UKBB = p.map(_binary_filter_slice, np.array_split(ind, n_slices))\n",
     "    MI_UKBB = np.hstack(MI_UKBB)\n",
