--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -203,7 +203,7 @@
     "            k += 1\n",
     "        return _MI_slice\n",
     "    # multiprocessing starts here\n",
-    "    ind = np.arange(len(gene_sid))\n",
+    "    ind = np.arange(len(bed1_sid))\n",
     "    n_slices = np.floor(len(ind)/chunck_size)\n",
     "    with mp.Pool(mp.cpu_count()) as p:\n",
     "        MI_UKBB = p.map(_continuous_filter_slice, np.array_split(ind, n_slices))\n",
@@ -230,7 +230,7 @@
     "            k += 1\n",
     "        return _MI_slice\n",
     "    # multiprocessing starts here\n",
-    "    ind = np.arange(len(gene_sid))\n",
+    "    ind = np.arange(len(bed1_sid))\n",
     "    n_slices = np.floor(len(ind)/chunck_size)\n",
     "    with mp.Pool(mp.cpu_count()) as p:\n",
     "        MI_UKBB = p.map(_binary_filter_slice, np.array_split(ind, n_slices))\n",
